@@ -1,3 +1,8 @@
+2005-04-03  Dalibor Topic  <robilad@kaffe.org>
+
+	* config/ia64/sysdepCallMethod.h:
+	Added guards.
+
 2005-04-03  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* libraries/clib/native/ClassLoader.c
